Fix syntax errors in Story.java and ConvexPolyhedron3D.java, and remove deprecated Applet usage in CMLUtils.java